--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
       <div class="card digital two">
         <div class="card-top">
           <span>Virtual</span>
-          <img src="/assets/img/airwallex-virtual.svg">
+          <img src="assets/img/airwallex-virtual.svg">
         </div>
         <div class="card-bottom">
           <div class="card-name">
             <p>Cardholder</p>
             <p>LourencoGHJ</p>
           </div>
-          <img src="/assets/img/visa-virtual.svg">
+          <img src="assets/img/visa-virtual.svg">
         </div>
       </div>
 
@@ -29,14 +29,14 @@
         <span class="frozen-label">Frozen</span>
         <div class="card-top">
           <span>Virtual</span>
-          <img src="/cards/assets/img/airwallex-virtual.svg">
+          <img src="assets/img/airwallex-virtual.svg">
         </div>
         <div class="card-bottom">
           <div class="card-name">
             <p>Cardholder</p>
             <p>LourencoGHJ</p>
           </div>
-          <img src="/cards/assets/img/visa-virtual.svg">
+          <img src="assets/img/visa-virtual.svg">
         </div>
       </div>
     </div>
@@ -48,112 +48,112 @@
       <div class="card digital one">
         <div class="card-top">
           <span>Virtual</span>
-          <img src="/cards/assets/img/airwallex-virtual.svg">
+          <img src="assets/img/airwallex-virtual.svg">
         </div>
         <div class="card-bottom">
           <div class="card-name">
             <p>Cardholder</p>
             <p>LourencoGHJ</p>
           </div>
-          <img src="/cards/assets/img/visa-virtual.svg">
+          <img src="assets/img/visa-virtual.svg">
         </div>
       </div>
 
       <div class="card digital two">
         <div class="card-top">
           <span>Virtual</span>
-          <img src="/cards/assets/img/airwallex-virtual.svg">
+          <img src="assets/img/airwallex-virtual.svg">
         </div>
         <div class="card-bottom">
           <div class="card-name">
             <p>Cardholder</p>
             <p>LourencoGHJ</p>
           </div>
-          <img src="/cards/assets/img/visa-virtual.svg">
+          <img src="assets/img/visa-virtual.svg">
         </div>
       </div>
 
       <div class="card digital three">
         <div class="card-top">
           <span>Virtual</span>
-          <img src="/cards/assets/img/airwallex-virtual.svg">
+          <img src="assets/img/airwallex-virtual.svg">
         </div>
         <div class="card-bottom">
           <div class="card-name">
             <p>Cardholder</p>
             <p>LourencoGHJ</p>
           </div>
-          <img src="/cards/assets/img/visa-virtual.svg">
+          <img src="assets/img/visa-virtual.svg">
         </div>
       </div>
 
       <div class="card digital four">
         <div class="card-top">
           <span>Virtual</span>
-          <img src="/cards/assets/img/airwallex-virtual.svg">
+          <img src="assets/img/airwallex-virtual.svg">
         </div>
         <div class="card-bottom">
           <div class="card-name">
             <p>Cardholder</p>
             <p>LourencoGHJ</p>
           </div>
-          <img src="/cards/assets/img/visa-virtual.svg">
+          <img src="assets/img/visa-virtual.svg">
         </div>
       </div>
 
       <div class="card digital five">
         <div class="card-top">
           <span>Virtual</span>
-          <img src="/cards/assets/img/airwallex-virtual.svg">
+          <img src="assets/img/airwallex-virtual.svg">
         </div>
         <div class="card-bottom">
           <div class="card-name">
             <p>Cardholder</p>
             <p>LourencoGHJ</p>
           </div>
-          <img src="/cards/assets/img/visa-virtual.svg">
+          <img src="assets/img/visa-virtual.svg">
         </div>
       </div>
 
       <div class="card digital six">
         <div class="card-top">
           <span>Virtual</span>
-          <img src="/cards/assets/img/airwallex-virtual.svg">
+          <img src="assets/img/airwallex-virtual.svg">
         </div>
         <div class="card-bottom">
           <div class="card-name">
             <p>Cardholder</p>
             <p>LourencoGHJ</p>
           </div>
-          <img src="/cards/assets/img/visa-virtual.svg">
+          <img src="assets/img/visa-virtual.svg">
         </div>
       </div>
 
       <div class="card digital seven">
         <div class="card-top">
           <span>Virtual</span>
-          <img src="/cards/assets/img/airwallex-virtual.svg">
+          <img src="assets/img/airwallex-virtual.svg">
         </div>
         <div class="card-bottom">
           <div class="card-name">
             <p>Cardholder</p>
             <p>LourencoGHJ</p>
           </div>
-          <img src="/cards/assets/img/visa-virtual.svg">
+          <img src="assets/img/visa-virtual.svg">
         </div>
       </div>
 
       <div class="card digital eight">
         <div class="card-top">
           <span>Virtual</span>
-          <img src="/cards/assets/img/airwallex-virtual.svg">
+          <img src="assets/img/airwallex-virtual.svg">
         </div>
         <div class="card-bottom">
           <div class="card-name">
             <p>Cardholder</p>
             <p>LourencoGHJ</p>
           </div>
-          <img src="/cards/assets/img/visa-virtual.svg">
+          <img src="assets/img/visa-virtual.svg">
         </div>
       </div>
 
